--- a/style.css
+++ b/style.css
@@ -185,9 +185,7 @@ footer {
 footer img {
     width: 200px;
 }
-
-
-@media only screen and (min-width: 320px) and (max-width: 480px) {
+@media only screen and (min-width: 320px) and (max-width: 375px) {
 
     body {
         width: 100%;
@@ -262,7 +260,8 @@ footer img {
 
     .automobil {
         width: 100%;
-        height: 80%;
+        height: 100%;
+        margin-bottom: 30%;
     }
 
     .automobil img {
@@ -273,13 +272,314 @@ footer img {
 
     .automobil h1 {
         font-size: 40px;
-        top: 83%;
+        top: 99%;
         left: 15%;
     }
 
     .automobil h2 {
         font-size: 20px;
-        top: 70%;
+        top: 84%;
         left: 5%;
+    }
+}
+
+@media only screen and (min-width: 375px) and (max-width:425px) {
+
+    body {
+        width: 100%;
+        height: 100vh;
+    }
+
+    .container {
+        width: 100%;
+    }
+
+    .logo {
+        width: 200px;
+        margin-left: 35%;
+    }
+
+    .present_car {
+        min-width: 150px;
+        max-width: 250px;
+        min-height: 70px;
+        max-height: 130px;
+        margin-left: 13%;    
+    }
+
+    .present_h2 {
+        font-size: 22px;
+    }
+
+    p.masterpiece_posudje {
+        font-size: 17px;
+    }
+
+    .col_center {
+        min-width: 230px;
+        max-width: 350px;
+        min-height: 100px;
+        max-height: 180px;
+    }
+
+    .container_gallery img {
+        display: none;
+    }
+
+    .container_mobile {
+        display: inline;
+        width: 200px;
+        height: 140px;
+    }
+
+    .naocare_1 {
+        width: 230px;
+        height: 140px;
+        margin-left: 13%;
+    }
+
+    .bioptron_1 {
+        width: 230px;
+        height: 140px;
+        margin-top: 4%;
+        margin-bottom: 4%;
+        margin-left: 10%;
+    }
+
+    .therapy_air {
+        width: 230px;
+        height: 150px;
+    }
+
+    .nagrade {
+        width: 330px;
+        height: 180px;
+        margin-left: 0;
+    }
+
+    .automobil {
+        width: 100%;
+        height: 100%;
+        margin-bottom: 30%;
+    }
+
+    .automobil img {
+        width: 300px;
+        height: 250px;
+        left: 0;
+    }
+
+    .automobil h1 {
+        font-size: 40px;
+        top: 99%;
+        left: 15%;
+    }
+
+    .automobil h2 {
+        font-size: 20px;
+        top: 84%;
+        left: 5%;
+    }
+}
+
+@media only screen and (min-width: 425px) and (max-width:768px) {
+
+    body {
+        width: 100%;
+        height: 100vh;
+    }
+
+    .container {
+        width: 100%;
+    }
+
+    .logo {
+        width: 250px;
+        margin-left: 100%;
+    }
+
+    .present_car {
+        min-width: 150px;
+        max-width: 320px;
+        min-height: 70px;
+        max-height: 170px;
+        margin-left: 11%;
+        margin-top: 30%;    
+    }
+
+    .present_h2 {
+        font-size: 22px;
+    }
+
+    p.masterpiece_posudje {
+        font-size: 17px;
+    }
+
+    .col_center {
+        min-width: 230px;
+        max-width: 350px;
+        min-height: 100px;
+        max-height: 180px;
+    }
+
+    .container_gallery img {
+        width: 100%;
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: -10%;
+    }
+
+    .container_mobile {
+        display: none;
+    }
+
+    .naocare_1 {
+        width: 230px;
+        height: 140px;
+        margin-left: 13%;
+    }
+
+    .bioptron_1 {
+        width: 230px;
+        height: 140px;
+        margin-top: 4%;
+        margin-bottom: 4%;
+        margin-left: 10%;
+    }
+
+    .therapy_air {
+        width: 350px;
+        height: 170px;
+        margin-left: 22.33%;
+    }
+
+    .nagrade {
+        width: 530px;
+        height: 250px;
+        margin-left: 10%;
+    }
+
+    .automobil {
+        width: 100%;
+        height: 100%;
+    }
+
+    .automobil img {
+        width: 300px;
+        height: 250px;
+        left: 0;
+    }
+
+    .automobil h1 {
+        font-size: 40px;
+        top: 60%;
+        left: 53%;
+    }
+
+    .automobil h2 {
+        font-size: 20px;
+        top: 40%;
+        left: 45%;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 920px) {
+
+    body {
+        width: 100%;
+        height: 100vh;
+    }
+
+    .container {
+        width: 100%;
+    }
+
+    .logo {
+        width: 250px;
+        margin-left: 100%;
+    }
+
+    .present_car {
+        min-width: 150px;
+        max-width: 320px;
+        min-height: 70px;
+        max-height: 170px;
+        margin-left: 11%;
+        margin-top: 30%;    
+    }
+
+    .present_h2 {
+        font-size: 22px;
+    }
+
+    p.masterpiece_posudje {
+        font-size: 17px;
+    }
+
+    .col_center {
+        min-width: 230px;
+        max-width: 350px;
+        min-height: 100px;
+        max-height: 180px;
+    }
+
+    .container_gallery img {
+        width: 100%;
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: -10%;
+    }
+
+    .container_mobile {
+        display: none;
+    }
+
+    .naocare_1 {
+        width: 230px;
+        height: 140px;
+        margin-left: 13%;
+    }
+
+    .bioptron_1 {
+        width: 230px;
+        height: 140px;
+        margin-top: 4%;
+        margin-bottom: 4%;
+        margin-left: 10%;
+    }
+
+    .therapy_air {
+        width: 350px;
+        height: 170px;
+        margin-left: 22.33%;
+    }
+
+    .nagrade {
+        width: 530px;
+        height: 250px;
+        margin-left: 10%;
+    }
+
+    .automobil {
+        width: 100%;
+        height: 30%;
+    }
+
+    .automobil img {
+        width: 300px;
+        height: 250px;
+        left: 0;
+    }
+
+    .automobil h1 {
+        font-size: 40px;
+        top: 60%;
+        left: 53%;
+    }
+
+    .automobil h2 {
+        font-size: 20px;
+        top: 40%;
+        left: 45%;
     }
 }
